<?xml version="1.0" encoding="utf-8"?>
<!--Chris Connor-->
<!--S1715477-->
<!--cconno208@caledonian.ac.uk-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/title_list" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />

</menu>
