<!--Chris Connor-->
<!--S1715477-->
<!--cconno208@caledonian.ac.uk-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".SearchFrament">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mainHeading"
            style="@style/TextAppearance.AppCompat.Headline"
            android:drawableStart="@drawable/ic_search_black_24dp"
            android:layout_width="match_parent"
            android:fontFamily="@font/roboto_condensed_bold"
            android:layout_height="wrap_content"
            android:text="@string/search_heading" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/search_subheading"
            />

        <TextView
            android:id="@+id/lbldatePickerFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/formLabel"
            android:drawableStart="@drawable/ic_date_24dp"
            android:text="@string/start_date_lbl" />

        <EditText
            android:id="@+id/datePickerFrom"
            style="@style/editTextFormField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_hint"
            android:inputType="date" />

        <TextView
            android:id="@+id/lbldatePickerTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/formLabel"
            android:drawableStart="@drawable/ic_date_24dp"
            android:text="@string/end_date_lbl" />

        <EditText
            android:id="@+id/datePickerTo"
            style="@style/editTextFormField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end_hint"
            android:inputType="date" />

        <View
            android:id="@+id/divider1"
            style="@style/formDivider" />

        <TextView
            android:id="@+id/lblMagnitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/formLabel"
            android:drawableStart="@drawable/ic_richter_24dp"
            android:text="@string/magnitude_lbl" />

        <Spinner
            android:id="@+id/magnitude"
            style="@style/editTextFormField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/magnitude_options" />

        <View
            android:id="@+id/divider2"
            style="@style/formDivider" />

        <TextView
            android:id="@+id/lblDepth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/formLabel"
            android:drawableStart="@drawable/ic_depth_24dp"
            android:text="@string/depth_lbl" />

        <EditText
            android:id="@+id/depth"
            style="@style/editTextFormField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/depth_hint"
            android:inputType="number" />

        <View
            android:id="@+id/divider3"
            style="@style/formDivider" />



        <TextView
            android:id="@+id/lblLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/formLabel"
            android:drawableStart="@drawable/ic_location_24dp"
            android:text="@string/earthquake_location_lbl" />

        <EditText
            android:id="@+id/location"
            style="@style/editTextFormField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_hint" />

        <View
            android:id="@+id/divider4"
            style="@style/formDivider" />

        <TextView
            android:id="@+id/lblSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/formLabel"
            android:text="@string/sort_by_lbl" />

        <Spinner
            android:id="@+id/sortBy"
            style="@style/editTextFormField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/sort_options" />

        <TextView
            android:id="@+id/lblSortOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/formLabel"
            android:text="@string/sort_lbl" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/sortOrder"
            style="@style/formRadioGroup"
            >

            <RadioButton
                android:id="@+id/sortASC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/ascending_radio" />

            <RadioButton
                android:id="@+id/sortDESC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/descending_radio" />

        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button_primary"
            android:background="@drawable/button_primary"
            android:drawableStart="@drawable/ic_search_white_24dp"
            android:text="@string/search_button_lbl" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_clear_black_24dp"
            android:background="@drawable/button_secondary"
            style="@style/button_secondary"
            android:text="@string/clear_button_lbl" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>